--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avengers Character Search</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="app.js"></script>
 </head>
 <body>
@@ -13,6 +14,7 @@
         </div>
     </header>
     <main>
+        <p>Search by Full Name or Alias</p>
         <form action="superheroes.php" method="get">
             <input name="hero" placeholder="e.g. Captain America or Steve Rogers">
             <button id="search-button">Search</button>
